--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -12,7 +12,9 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
-    {% block title %}Заголовок{% endblock %}
+    {% block title %}
+      <title>Заголовок</title>
+    {% endblock %}
 
   </head>
   <body>
