--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,13 +1,7 @@
 {% extends 'base.html' %}
-
-{% block title %}
-Записи сообщества {{ group.title }}
-{% endblock %}
-
 {% block content %}
-
 <div class="container py-5">
-  <h1>{{ group }}</h1>
+  <h1>Записи сообщества {{ group }}</h1>
   <p>
     {{ group.description|linebreaksbr }}
   </p>
@@ -27,6 +21,4 @@
     {% endfor %}
   </article>
 </div>
-
-
 {% endblock %}
