--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
-
 {% block title %}
 <title>Последние обновления на сайте</title>
 {% endblock %}
-
 {% block content %}
 <div class="container py-5">
   <h1>Последние обновления на сайте</h1>
@@ -21,8 +19,7 @@
         {{ post.text|linebreaksbr }}
       </p>
       {% if post.group %}
-        <a href="{% url 'posts:group_lists' post.group.slug %}">все записи группы</a>
-    
+        <a href="{% url 'posts:group_lists' post.group.slug %}">все записи группы {{ post.group }}</a>
       </article>
       {% endif %}
       {% if not forloop.last %}
