--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -11,9 +11,11 @@
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    {% block title %}
-      <title>Заголовок</title>
-    {% endblock %}
+    <title>
+      {% block title %}
+        Заголовок
+      {% endblock %}
+    </title>
   </head>
   <body>
     <header>
