--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,29 +1,32 @@
 {% extends "base.html" %}
 {% block title %}
-<title>Последние обновления на сайте</title>
+  Последние обновления на сайте
 {% endblock %}
 {% block content %}
-<div class="container py-5">
-  <h1>Последние обновления на сайте</h1>
-  <article>
+  <div class="container py-5">
+    <h1>Последние обновления на сайте</h1>
     {% for post in posts %}
-      <ul>
-        <li>
-          Автор: {{ post.author.get_full_name }}
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>
-      <p>
-        {{ post.text|linebreaksbr }}
-      </p>
-      {% if post.group %}
-        <a href="{% url 'posts:group_lists' post.group.slug %}">все записи группы {{ post.group }}</a>
+      <article>
+        <ul>
+          <li>
+            Автор: {{ post.author.get_full_name }}
+          </li>
+          <li>
+            Дата публикации: {{ post.pub_date|date:"d E Y" }}
+          </li>
+        </ul>
+        <p>
+          {{ post.text|linebreaksbr }}
+        </p>
+        {% if post.group %}
+          <a href="{% url 'posts:group_lists' post.group.slug %}">
+            все записи группы {{ post.group }}
+          </a>
+        {% endif %}
+        {% if not forloop.last %}
+        {% endif %}
       </article>
-      {% endif %}
-      {% if not forloop.last %}
-      <hr>{% endif %}
+    <hr>
     {% endfor %}
-</div>
+  </div>
 {% endblock %}
