--- a/yatube/templates/users/login.html
+++ b/yatube/templates/users/login.html
@@ -1,7 +1,5 @@
-# templates/users/login.html
-
 {% extends "base.html" %}
-{% block title %}Войти{% endblock %}
+{% block title %}<title>Войти</title>{% endblock %}
 {% block content %}
 {% load user_filters %}
   <div class="row justify-content-center">
@@ -61,7 +59,7 @@
             <button type="submit" class="btn btn-primary">
               Войти
             </button>
-            <a href="{% url 'users:login' %}" class="btn btn-link">
+            <a href="{% url 'users:password_change' %}" class="btn btn-link">
               Забыли пароль?
             </a>
           </div>
