--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -5,7 +5,7 @@
     <p>
       {{ group.description|linebreaksbr }}
     </p>
-    {% for post in posts %}
+    {% for post in page_obj %}
       <article>
         <ul>
           <li>
@@ -22,5 +22,6 @@
       {% if not forloop.last %}
       <hr>{% endif %}
     {% endfor %}
+    {% include 'posts/includes/paginator.html' %}
   </div>
 {% endblock %}
