Подключение редактирования поста

--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -32,6 +32,11 @@
       <p>
         {{ posts.text|linebreaks }}
       </p>
+      {% if request.user == posts.author %}
+        <a class='btn btn-primary' href="{% url 'posts:post_edit' posts.pk %}">
+          Редактировать запись
+        </a>
+      {% endif %}
     </article>
   </div>
 {% endblock %}
